--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
   <head>
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
+    <!-- normalizr -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <!-- css stylesheet -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- modernizr -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   </head>
   <body>
     <header>
+      
       <!-- logo -->
-      <h1>Exceptional</h1>
-      <h2>Realty Group</h2>
+      <div id="logo">
+        <h1>Exceptional</h1>
+        <h2>Realty Group</h2>
+      </div>
 
       <nav>
         <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
@@ -49,6 +58,7 @@
           P.O.Box 5555<br>
           Brooklyn, NY 11201
         </address>
+        <!-- insted of being seen as a paragraph, it has address semantics -->
       </div>
 
       <div>
